test of listing files.